--- a/incidents.html
+++ b/incidents.html
@@ -10,13 +10,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler.min.css">
     <link rel="stylesheet" href="src/css/main.css" />
     <link rel="stylesheet" href="src/css/incidents.css" />
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="icon" href="plugins/favorites - Chrome/ico.png" type="image/png" />
 </head>
 
 <body data-bs-theme="dark">
     <!-- Navbar -->
-    <header class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <div class="container-xxl px-3">
+    <header class="navbar sticky-top">
+        <div class="container-fluid px-4">
             <div class="navbar-brand d-flex align-items-center">
                 <svg class="icon-brand me-2" width="32" height="32" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="1.5" role="img" aria-label="Aegis shield icon">
@@ -27,17 +29,15 @@
                         stroke-linecap="round">
                     </path>
                 </svg>
-                <div class="d-flex flex-column">
+                <div class="d-flex flex-column d-none d-md-flex">
                     <h1 class="mb-0" data-i18n="INCIDENT_MANAGEMENT">Gestión de Incidencias</h1>
-                    <small class="text-muted" data-i18n="CYBERSECURITY_INCIDENTS">Incidencias de Ciberseguridad</small>
+                    <small class="text-muted" data-i18n="CYBERSECURITY_INCIDENTS">Herramienta de Investigación</small>
                 </div>
             </div>
 
-            <div class="ms-auto d-flex align-items-center gap-2">
-                <!-- Botón Modo Oscuro/Claro -->
-                <button class="btn btn-outline-secondary" id="themeToggle" title="Cambiar tema"
-                    aria-label="Toggle theme">
-                    <svg id="iconLight" class="icon icon-sun" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+            <div class="navbar-controls d-flex flex-grow-1 justify-content-end align-items-center gap-2">
+                <button class="btn btn-icon btn-ghost" id="themeToggle" title="Cambiar tema">
+                    <svg id="iconLight" class="icon icon-sun" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                         stroke-linejoin="round" style="display: none;">
                         <circle cx="12" cy="12" r="4"></circle>
@@ -45,58 +45,69 @@
                             d="M12 2v2m0 16v2M4.93 4.93l1.41 1.41m11.32 11.32l1.41 1.41M2 12h2m16 0h2M4.93 19.07l1.41-1.41m11.32-11.32l1.41-1.41">
                         </path>
                     </svg>
-                    <svg id="iconDark" class="icon icon-moon" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+                    <svg id="iconDark" class="icon icon-moon" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"></path>
                     </svg>
                 </button>
 
-                <!-- Botón Cambio de Idioma -->
-                <button class="btn btn-outline-secondary" id="langToggle" title="Cambiar idioma"
-                    aria-label="Change language">
-                    <span id="langText">EN</span>
+                <button class="btn btn-icon btn-ghost" id="langToggle" title="Cambiar idioma">
+                    <span id="langText" class="fw-bold" style="font-size: 0.85rem;">ES</span>
                 </button>
 
-                <!-- Dropdown Usuario -->
+                <div class="vr mx-2 d-none d-md-block"></div>
+
                 <div class="dropdown">
-                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="userDropdown"
+                    <button class="btn btn-user-profile d-flex align-items-center gap-2" type="button" id="userDropdown"
                         data-bs-toggle="dropdown" aria-expanded="false">
-                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
-                            fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
-                            <circle cx="12" cy="7" r="4"></circle>
+                        <div class="user-avatar">
+                            <span id="userInitial">A</span>
+                        </div>
+                        <div class="user-info d-none d-lg-flex flex-column align-items-start">
+                            <span class="user-name fw-bold" id="currentUserName">Administrador</span>
+                            <span class="user-email text-muted" id="currentUserEmail">admin@aegis.local</span>
+                        </div>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-chevron-down ms-1" width="14"
+                            height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M6 9l6 6 6-6"></path>
                         </svg>
-                        <span id="currentUserName">Admin</span>
                     </button>
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                        <li><a class="dropdown-item" href="index.html">
-                                <svg class="icon me-2" width="18" height="18" viewBox="0 0 24 24" fill="none"
-                                    stroke="currentColor" stroke-width="2">
+                    <ul class="dropdown-menu dropdown-menu-end shadow-lg border-0" aria-labelledby="userDropdown">
+                        <li>
+                            <a class="dropdown-item d-flex align-items-center gap-2 py-2" href="index.html">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="18" height="18"
+                                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                     <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                                    <polyline points="9 22 9 12 15 12 15 22"></polyline>
                                 </svg>
-                                <span data-i18n="DASHBOARD">Dashboard</span>
-                            </a></li>
-                        <li><a class="dropdown-item" href="admin.html">
-                                <svg class="icon me-2" width="18" height="18" viewBox="0 0 24 24" fill="none"
-                                    stroke="currentColor" stroke-width="2">
-                                    <path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
-                                    <circle cx="8.5" cy="7" r="4"></circle>
-                                    <polyline points="17 11 19 13 23 9"></polyline>
+                                <span data-i18n="DASHBOARD">Investigación</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item d-flex align-items-center gap-2 py-2" href="admin.html">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="18" height="18"
+                                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M12 20h9"></path>
+                                    <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
                                 </svg>
                                 <span data-i18n="ADMIN_PANEL">Panel Admin</span>
-                            </a></li>
-                        <li>
-                            <hr class="dropdown-divider">
+                            </a>
                         </li>
-                        <li><a class="dropdown-item text-danger" href="#" id="logoutBtn">
-                                <svg class="icon me-2" width="18" height="18" viewBox="0 0 24 24" fill="none"
-                                    stroke="currentColor" stroke-width="2">
+                        <li>
+                            <hr class="dropdown-divider opacity-50">
+                        </li>
+                        <li>
+                            <a class="dropdown-item d-flex align-items-center gap-2 py-2 text-danger" href="#"
+                                id="logoutBtn">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="18" height="18"
+                                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                     <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
                                     <polyline points="16 17 21 12 16 7"></polyline>
                                     <line x1="21" y1="12" x2="9" y2="12"></line>
                                 </svg>
                                 <span data-i18n="LOGOUT">Cerrar Sesión</span>
-                            </a></li>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -677,9 +688,22 @@
             if (logoutBtn) {
                 logoutBtn.addEventListener('click', function (e) {
                     e.preventDefault();
-                    if (confirm('¿Estás seguro de que deseas cerrar sesión?')) {
-                        Auth.logout();
-                    }
+                    Swal.fire({
+                        title: Translations.currentLanguage === 'en' ? 'Are you sure?' : '¿Estás seguro?',
+                        text: Translations.currentLanguage === 'en' ? 'Do you want to logout?' : '¿Deseas cerrar sesión?',
+                        icon: 'warning',
+                        showCancelButton: true,
+                        confirmButtonColor: '#3085d6',
+                        cancelButtonColor: '#d33',
+                        confirmButtonText: Translations.currentLanguage === 'en' ? 'Yes, logout' : 'Sí, cerrar sesión',
+                        cancelButtonText: Translations.currentLanguage === 'en' ? 'Cancel' : 'Cancelar',
+                        background: document.body.getAttribute('data-bs-theme') === 'dark' ? '#1a1f3c' : '#fff',
+                        color: document.body.getAttribute('data-bs-theme') === 'dark' ? '#fff' : '#000'
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            Auth.logout();
+                        }
+                    });
                 });
             }
 
@@ -747,6 +771,77 @@
         window.editIncident = (id) => IncidentManager.editIncident(id);
         window.deleteIncident = (id) => IncidentManager.deleteIncident(id);
         window.viewIncident = (id) => IncidentManager.viewIncident(id);
+    </script>
+    <!-- Footer -->
+    <footer class="footer mt-auto py-4">
+        <div class="container-fluid px-3">
+            <div class="row align-items-center">
+                <div class="col-12 text-center d-flex flex-column align-items-center gap-3">
+                    <div class="footer-branding d-flex flex-column align-items-center">
+                        <small class="text-muted fw-bold" data-i18n="FOOTER_TEXT"></small>
+                        <small class="text-muted opacity-75" data-i18n="FOOTER_MADE_WITH"></small>
+                    </div>
+                    <div class="social-links">
+                        <a href="https://github.com/s3codecL" target="_blank" rel="noopener noreferrer" title="GitHub">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                fill="currentColor">
+                                <path
+                                    d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+                            </svg>
+                        </a>
+                        <a href="https://discord.gg/NVYadvZDtQ" target="_blank" rel="noopener noreferrer"
+                            title="Discord">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                fill="currentColor">
+                                <path
+                                    d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 00-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1276c-.598.3428-1.2205.6447-1.8733.8923a.0766.0766 0 00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 00.0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.6604a.061.061 0 00-.0312-.0286zM8.02 15.3312c-1.1835 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9555-2.4189 2.157-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.9555 2.4189-2.1569 2.4189zm7.9748 0c-1.1835 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9554-2.4189 2.1569-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.946 2.4189-2.1568 2.4189Z" />
+                            </svg>
+                        </a>
+                        <a href="https://www.youtube.com/@s3codecL" target="_blank" rel="noopener noreferrer"
+                            title="YouTube">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                fill="currentColor">
+                                <path
+                                    d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z" />
+                            </svg>
+                        </a>
+                        <a href="https://www.linkedin.com/in/gandradev/" target="_blank" rel="noopener noreferrer"
+                            title="LinkedIn">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                fill="currentColor">
+                                <path
+                                    d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z" />
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Back to top button -->
+    <button id="backToTop" class="back-to-top" aria-label="Volver arriba">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M18 15l-6-6-6 6" />
+        </svg>
+    </button>
+
+    <script>
+        // Back to top button visibility
+        const backToTopBtn = document.getElementById('backToTop');
+        if (backToTopBtn) {
+            window.onscroll = function () {
+                if (document.body.scrollTop > 500 || document.documentElement.scrollTop > 500) {
+                    backToTopBtn.classList.add('visible');
+                } else {
+                    backToTopBtn.classList.remove('visible');
+                }
+            };
+            backToTopBtn.onclick = function () {
+                window.scrollTo({ top: 0, behavior: 'smooth' });
+            };
+        }
     </script>
 </body>
 
