--- a/index.html
+++ b/index.html
@@ -152,43 +152,61 @@
 
         <!-- User Menu -->
         <div class="dropdown ms-2">
-          <button class="btn btn-outline-secondary dropdown-toggle d-flex align-items-center" type="button"
-            data-bs-toggle="dropdown">
-            <div class="avatar avatar-xs me-2 d-none d-sm-flex">U</div>
-            <span id="user-display-name" class="d-none d-md-inline" data-i18n="USER_DEFAULT_NAME">Usuario</span>
-          </button>
-          <div class="dropdown-menu dropdown-menu-end">
-            <div class="dropdown-item disabled">
-              <small class="text-muted" id="user-email">email@example.com</small>
+          <button class="btn btn-user-profile dropdown-toggle" type="button" id="userDropdown" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            <div class="user-avatar">
+              <span id="userInitial">A</span>
             </div>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="admin.html" id="admin-link" style="display: none;">
-              <svg class="me-2" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                stroke-width="2">
-                <path d="M12 20h9"></path>
-                <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
-              </svg>
-              <span data-i18n="ADMIN_PANEL">Panel Admin</span>
-            </a>
-            <a class="dropdown-item" href="incidents.html" id="incidents-link" style="display: none;">
-              <svg class="me-2" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                stroke-width="2">
-                <path d="M12 2L4 6v6c0 5.25 3.5 10.2 8 12 4.5-1.8 8-6.75 8-12V6l-8-4z"></path>
-                <path d="M12 8v4m0 4h.01"></path>
-              </svg>
-              <span data-i18n="INCIDENT_MANAGEMENT">Gestión de Incidencias</span>
-            </a>
-            <div class="dropdown-divider" id="admin-divider" style="display: none;"></div>
-            <a class="dropdown-item text-danger" href="#" onclick="handleLogout(event)">
-              <svg class="me-2" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                stroke-width="2">
-                <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
-                <polyline points="16 17 21 12 16 7"></polyline>
-                <line x1="21" y1="12" x2="9" y2="12"></line>
-              </svg>
-              <span data-i18n="LOGOUT">Cerrar Sesión</span>
-            </a>
-          </div>
+            <span class="user-name d-none d-md-inline" id="user-display-name"
+              data-i18n="USER_DEFAULT_NAME">Administrador</span>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-chevron-down ms-1" width="14" height="14"
+              viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M6 9l6 6 6-6"></path>
+            </svg>
+          </button>
+          <ul class="dropdown-menu dropdown-menu-end shadow-lg border-0 dropdown-menu-user"
+            aria-labelledby="userDropdown">
+            <li>
+              <div class="dropdown-header-user" id="user-email">admin@aegis.local</div>
+            </li>
+            <li>
+              <hr class="dropdown-divider-user">
+            </li>
+            <li>
+              <a class="dropdown-item dropdown-item-user" href="admin.html" id="admin-link" style="display: none;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M12 20h9"></path>
+                  <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
+                </svg>
+                <span data-i18n="ADMIN_PANEL">Panel Admin</span>
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item dropdown-item-user" href="incidents.html" id="incidents-link"
+                style="display: none;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
+                </svg>
+                <span data-i18n="INCIDENT_MANAGEMENT">Gestión de Incidencias</span>
+              </a>
+            </li>
+            <li>
+              <hr class="dropdown-divider-user">
+            </li>
+            <li>
+              <a class="dropdown-item dropdown-item-user text-danger" href="#" onclick="handleLogout(event)">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+                  <polyline points="16 17 21 12 16 7"></polyline>
+                  <line x1="21" y1="12" x2="9" y2="12"></line>
+                </svg>
+                <span data-i18n="LOGOUT">Cerrar Sesión</span>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
