--- a/incidents.html
+++ b/incidents.html
@@ -16,9 +16,10 @@
 </head>
 
 <body data-bs-theme="dark">
-    <!-- Navbar -->
+    <!-- Navbar Mejorada -->
     <header class="navbar sticky-top">
         <div class="container-fluid px-4">
+            <!-- Logo y Branding -->
             <div class="navbar-brand d-flex align-items-center">
                 <svg class="icon-brand me-2" width="32" height="32" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="1.5" role="img" aria-label="Aegis shield icon">
@@ -26,8 +27,7 @@
                     <path d="M12 2l7 4v5c0 5-3.5 9.5-7 11-3.5-1.5-7-6-7-11V6l7-4z" fill="none" stroke="currentColor"
                         stroke-linejoin="round" stroke-linecap="round"></path>
                     <path d="M9.5 10.5c.8.6 1.5.9 2.5.9s1.7-.3 2.5-.9" fill="none" stroke="currentColor"
-                        stroke-linecap="round">
-                    </path>
+                        stroke-linecap="round"></path>
                 </svg>
                 <div class="d-flex flex-column d-none d-md-flex">
                     <h1 class="mb-0" data-i18n="INCIDENT_MANAGEMENT">Gestión de Incidencias</h1>
@@ -35,7 +35,9 @@
                 </div>
             </div>
 
+            <!-- Controles Derecha -->
             <div class="navbar-controls d-flex flex-grow-1 justify-content-end align-items-center gap-2">
+                <!-- Tema -->
                 <button class="btn btn-icon btn-ghost" id="themeToggle" title="Cambiar tema">
                     <svg id="iconLight" class="icon icon-sun" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -51,42 +53,39 @@
                     </svg>
                 </button>
 
-                <button class="btn btn-icon btn-ghost" id="langToggle" title="Cambiar idioma">
+                <!-- Idioma -->
+                <button class="btn btn-ghost" id="langToggle" title="Cambiar idioma">
                     <span id="langText" class="fw-bold" style="font-size: 0.85rem;">ES</span>
                 </button>
 
                 <div class="vr mx-2 d-none d-md-block"></div>
 
                 <div class="dropdown">
-                    <button class="btn btn-user-profile d-flex align-items-center gap-2" type="button" id="userDropdown"
+                    <button class="btn btn-user-profile dropdown-toggle" type="button" id="userDropdown"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         <div class="user-avatar">
                             <span id="userInitial">A</span>
                         </div>
-                        <div class="user-info d-none d-lg-flex flex-column align-items-start">
-                            <span class="user-name fw-bold" id="currentUserName">Administrador</span>
-                            <span class="user-email text-muted" id="currentUserEmail">admin@aegis.local</span>
-                        </div>
+                        <span class="user-name d-none d-md-inline" id="currentUserName"
+                            data-i18n="USER_DEFAULT_NAME">Administrador</span>
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-chevron-down ms-1" width="14"
                             height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M6 9l6 6 6-6"></path>
                         </svg>
                     </button>
-                    <ul class="dropdown-menu dropdown-menu-end shadow-lg border-0" aria-labelledby="userDropdown">
+                    <ul class="dropdown-menu dropdown-menu-end shadow-lg border-0 dropdown-menu-user"
+                        aria-labelledby="userDropdown">
                         <li>
-                            <a class="dropdown-item d-flex align-items-center gap-2 py-2" href="index.html">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="18" height="18"
-                                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-                                    <polyline points="9 22 9 12 15 12 15 22"></polyline>
-                                </svg>
-                                <span data-i18n="DASHBOARD">Investigación</span>
-                            </a>
+                            <div class="dropdown-header-user" id="currentUserEmail">admin@aegis.local</div>
                         </li>
                         <li>
-                            <a class="dropdown-item d-flex align-items-center gap-2 py-2" href="admin.html">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="18" height="18"
-                                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <hr class="dropdown-divider-user">
+                        </li>
+                        <li>
+                            <a class="dropdown-item dropdown-item-user" href="admin.html">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
                                     <path d="M12 20h9"></path>
                                     <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
                                 </svg>
@@ -94,13 +93,23 @@
                             </a>
                         </li>
                         <li>
-                            <hr class="dropdown-divider opacity-50">
+                            <a class="dropdown-item dropdown-item-user" href="incidents.html">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
+                                </svg>
+                                <span data-i18n="INCIDENT_MANAGEMENT">Gestión de Incidencias</span>
+                            </a>
                         </li>
                         <li>
-                            <a class="dropdown-item d-flex align-items-center gap-2 py-2 text-danger" href="#"
-                                id="logoutBtn">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="18" height="18"
-                                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <hr class="dropdown-divider-user">
+                        </li>
+                        <li>
+                            <a class="dropdown-item dropdown-item-user text-danger" href="#" id="logoutBtn">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
                                     <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
                                     <polyline points="16 17 21 12 16 7"></polyline>
                                     <line x1="21" y1="12" x2="9" y2="12"></line>
@@ -656,9 +665,9 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module">
-        import Auth from 'src/js/auth.js';
-        import { Translations } from 'src/js/translations.js';
-        import IncidentManager from 'src/js/incidents.js';
+        import Auth from '/src/js/auth.js';
+        import { Translations } from '/src/js/translations.js';
+        import IncidentManager from '/src/js/incidents.js';
 
         // Protección de acceso - solo administradores
         document.addEventListener('DOMContentLoaded', function () {
@@ -682,6 +691,11 @@
             const savedLang = localStorage.getItem("osintLanguage") || "es";
             Translations.setLanguage(savedLang);
             updateLangButton(savedLang);
+
+            // Asegurar que las traducciones se aplican después de un breve delay
+            setTimeout(() => {
+                Translations.applyTranslations();
+            }, 100);
 
             // Logout
             const logoutBtn = document.getElementById('logoutBtn');
