--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel de Administración - Aegis HUB</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler.min.css">
     <link rel="stylesheet" href="src/css/main.css" />
@@ -30,8 +30,8 @@
                         stroke-linecap="round"></path>
                 </svg>
                 <div class="d-flex flex-column d-none d-md-flex">
-                    <h1 class="mb-0" data-i18n="ADMIN_PANEL_TITLE">Panel de Administración</h1>
-                    <small class="text-muted" data-i18n="USER_MANAGEMENT">Gestión de Usuarios</small>
+                    <h1 class="mb-0" data-i18n="AEGIS_DASHBOARD">Aegis HUB</h1>
+                    <small class="text-muted" data-i18n="ADMIN_PANEL_TITLE">Panel de Administración</small>
                 </div>
             </div>
 
@@ -57,8 +57,10 @@
                     <span id="current-lang">ES</span>
                 </button>
 
-                <div class="vr mx-2 d-none d-md-block"></div>
+                <!-- Separador visual -->
+                <div class="vr mx-2 d-none d-lg-block"></div>
 
+                <!-- User Menu -->
                 <div class="dropdown">
                     <button class="btn btn-user-profile dropdown-toggle" type="button" id="userDropdown"
                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -81,7 +83,18 @@
                             <hr class="dropdown-divider-user">
                         </li>
                         <li>
-                            <a class="dropdown-item dropdown-item-user" href="admin.html">
+                            <a class="dropdown-item dropdown-item-user" href="index.html">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                                    <polyline points="9 22 9 12 15 12 15 22"></polyline>
+                                </svg>
+                                <span data-i18n="DASHBOARD">Dashboard</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item dropdown-item-user active" href="admin.html">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round">
